--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "vue-cli-service serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "preview": "node test-server/app.js"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -39,6 +40,8 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^2.0.0",
     "lint-staged": "^9.5.0",
     "sass": "^1.3.2",
     "sass-loader": "^8.0.2",
